<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataPribadiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        app:title="@string/data_pribadi_label"/>

    <ImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toTopOf="@id/scrollContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/mybiodata" />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/foto"
        app:layout_constraintBottom_toTopOf="@id/backBtn">

        <LinearLayout
            android:id="@+id/mainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttl_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jk_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tinggi_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/berat_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agama_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_label"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_isi1"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_isi2"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/handphone_label"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/back_label"
        app:layout_constraintTop_toBottomOf="@id/scrollContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1"/>



</androidx.constraintlayout.widget.ConstraintLayout>