<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        app:title="@string/app_name"/>

    <Button
        android:id="@+id/dPribadiBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/data_pribadi_label"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toTopOf="@id/dPendidikanBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"/>

    <Button
        android:id="@+id/dPendidikanBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/data_pendidikan_label"
        app:layout_constraintTop_toBottomOf="@id/dPribadiBtn"
        app:layout_constraintBottom_toTopOf="@id/kemampuanBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/kemampuanBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/kemampuan_label"
        app:layout_constraintTop_toBottomOf="@id/dPendidikanBtn"
        app:layout_constraintBottom_toTopOf="@id/pengalamanBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/pengalamanBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pengalaman_label"
        app:layout_constraintTop_toBottomOf="@id/kemampuanBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/keluar_label"
        app:layout_constraintTop_toBottomOf="@id/pengalamanBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>