<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PengalamanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tollBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/pengalaman_label"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_card_travel_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/tollBar"
        app:layout_constraintBottom_toTopOf="@id/layoutContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/mybiodata" />

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/foto"
        app:layout_constraintBottom_toTopOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pengalaman Kerja:"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Desain Grafis (2016-2017)"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/back_label"
        app:layout_constraintTop_toBottomOf="@id/layoutContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>