<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataPendidikanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tollBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        app:title="@string/data_pendidikan_label" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_account_balance_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/tollBar"
        app:layout_constraintBottom_toTopOf="@id/layoutContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/mybiodata"/>

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/foto"
        app:layout_constraintBottom_toTopOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SDN TANAH TINGGI 7 TANGERANG"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(2003~2009)"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SMP PGRI 1 TANGERANG"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(2009~2012)"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SMK NEGERI 5 TANGERANG"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Multimedia (2012~2015)"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UNIVERSITAS PAMULANG"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teknik Informatika (2015~2020)"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/back_label"
        app:layout_constraintTop_toBottomOf="@id/layoutContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>